--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://mitchelldlandau.github.io/meet-app/",
   "name": "meet-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MitchellDLandau.github.io/meet-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
